welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: ':' expected but '.' found.
def faireLigne(c.color1,c.color2) {
                ^FlowerPot:20: error: identifier expected but '}' found.
}
^